App working on exposed service

--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9.7
 
-ENTRYPOINT /app
+WORKDIR /app
 
-COPY requirements.txt requirements.txt
+COPY . /app
 
 RUN pip3 install --no-cache-dir --requirement requirements.txt
 
-COPY . .
+EXPOSE 5000
 
-CMD ["python3", "-m" , "flask", "run", "--host=8.8.8.8"]
+ENTRYPOINT ["python3", "-m" , "flask", "run", "--host=0.0.0.0"]
