--- a/manifest.yml
+++ b/manifest.yml
@@ -58,6 +58,20 @@ spec:
         envFrom:
         - configMapRef:
             name: application
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 5000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /healthx
+            port: 5000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
       imagePullSecrets:
       - name: regcreds
 ---
